--- a/src/style/App.css
+++ b/src/style/App.css
@@ -57,3 +57,35 @@ body {
   height: 30px;
 }
 .del-btn:hover {background-color: rgb(227, 145, 115);}
+
+.postPagination {
+  display: flex;
+  justify-content: center;
+}
+
+.itemPagination {
+  text-align: center;
+  display: block;
+  color: snow;
+  cursor: pointer;
+  padding: 7px;
+  margin-top: 20px;
+  min-width: 20px;
+  border: solid 1px rgb(23, 160, 151);
+  background-color: rgba(23, 160, 151, .2);
+  transition: .3s;
+}
+
+.itemPagination:hover {
+  background-color: rgba(23, 160, 151, .8);
+}
+
+.itemPagination:not(:first-child) {
+  margin-left: 10px;
+}
+
+.itemPagination_active {
+  background-color: rgb(0, 251, 255);
+  color: black;
+  font-weight: bold;
+}
