--- a/src/style/PostPage.module.css
+++ b/src/style/PostPage.module.css
@@ -7,22 +7,58 @@
   font-size: 1.3em;
 }
 
-.title {
+.titlePage {
   text-transform: capitalize;
   color: antiquewhite;
   border-bottom: solid 1px;
   padding: 10px;
 }
 
-.body {
+.bodyPage {
   text-transform: capitalize;
   text-align: center;
   color: burlywood;
 }
 
-.id {
+.idPage {
   border: solid 1px;
   margin: 10px;
+  padding: 10px;
+  color: rgb(206, 160, 147);
+}
+
+
+.CommentsTitle {
+  max-width: 800px;
+  margin: 50px auto;
+}
+
+.CommentsTitle span{
+  font-size: 40px;
+  color: rgb(255, 223, 127);
+}
+
+.postComment {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  font-size: 1.3em;
+}
+
+.emailComment {
+  text-transform: lowercase;
+  color: antiquewhite;
+  border-bottom: solid 1px;
+  padding: 10px;
+}
+
+.bodyComment {
+  text-transform: capitalize;
+  color: burlywood;
+}
+
+.idComment {
   padding: 10px;
   color: rgb(206, 160, 147);
 }
